<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Metatopos</string>
    <string name="google_maps_key">AIzaSyAMj-RHIry4mzY6B8MxiwkHHzb1K6JdRws</string>
    <string name="welcome">Welcome\nto Metatopos</string>
    <string name="create_an_account">Create an Account</string>
    <string name="or_use">or use</string>
    <string name="or">or</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="facebook_app_id">2019665124755259</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">Hj4oR6ZL5VBkJSEQVH8aUt9BM</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">pTt9CXIF4ZQ2ffkdZlVy0viNw8gKKXoh25hdt4RZmJSYYHY5sa</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hello_there">Hello there!</string>
    <string name="password">Password</string>
    <string name="email_id_or_username">Email ID or Username</string>
    <string name="login_to_access_your_account">Login to access your account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="register_here">Register Here</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_creating_account_and_log_in_you_are_agree_our">By Creating Account and Log in you are agree our</string>
    <string name="send">Send</string>
    <string name="resend_email">Resend Email</string>
    <string name="email_id">Email ID</string>
    <string name="forgot_password_sub_text">Enter your email below to receive \nyour password reset instructions.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="new_account">New account</string>
    <string name="all_fields_compulsory">All fields are compulsory</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_genmoji">Add GenMoji</string>
    <string name="done">Done</string>
    <string name="select_language">Select language</string>
    <string name="registration_failed">Registration failed</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="choose_from">Choose From</string>
    <string name="ratings_and_feedbacks">Ratings and Feedbacks</string>
    <string name="add_your_rating">Add your rating</string>
    <string name="add_your_feedback">Add your Feedback</string>
    <string name="rating_feedback">Rating &amp; Feedback</string>
    <string name="i_would_like_to_buy_it_for">I would like to buy it for</string>
    <string name="submit">Submit</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="chat">Chat</string>
    <string name="like">Like</string>
    <string name="intrested">Intrested</string>
    <string name="not_going">Not Going</string>
    <string name="advertisement">Advertisement</string>
    <string name="advertisements">Advertisements</string>
    <string name="event">Event</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="post">Post</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="share_app_to_your_frnds">Share app to your friends and help them\nin learning</string>
    <string name="post_event_and_advertisements">Posts, Events and Advertisements</string>
    <string name="logout">Logout</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="favourites_items">Favourite Items</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="change_language">Change Language</string>
    <string name="advertisements_plans">Advertisements Plans</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="report_issues">Report Issues</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="my">My</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="remove_current_photo">Remove Current Photo</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="take_photo">Take Photo</string>
    <string name="notifications">Notifications</string>
    <string name="MODEL">list</string>
    <string name="position">position</string>
    <string name="messages">Messages</string>
    <string name="dont_have_msg">You don\'t have any\nMessages right now</string>
    <string name="advertisement_plan">Advertisement Plan</string>
    <string name="select_pay"><![CDATA[Select & Pay]]></string>
    <string name="metatopos">Metatopos</string>
    <string name="details">Details</string>
    <string name="buget">Budget</string>
    <string name="description">Description</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="account_Visibility">When your account visibility is on then your followers can see your offers, needs and advtiserments. But when its disables then everyone can see your offers, needs and advtiserments.</string>
    <string name="photo">Photo</string>
    <string name="visibility">Visibility</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="podt_text">You will be charged for the advertisement you post based on the tenor and visibility you choose</string>
    <string name="write_something_here">Write something here....</string>
    <string name="buy_or_sell">Buy or Sell</string>
    <string name="car_devices_equipment_real_estate_and_more">Car, Devices, Equipment, Real Estate and more</string>
    <string name="services">Services</string>
    <string name="repair_consullt"><![CDATA[Repair, Consulatation, Programing, Design & more]]></string>
    <string name="food_and_groceries">Food and Groceries</string>
    <string name="jobs">Jobs</string>
    <string name="sports_and_entertainment">Sports and Entertainment</string>
    <string name="events">events</string>
    <string name="event_content"><![CDATA[Party, Option, New Opning & more]]></string>
    <string name="others">Others</string>
    <string name="save">Save</string>
    <string name="unfollow">Unfollow</string>
    <string name="link">Link</string>
    <string name="add_image">Add Image</string>
    <string name="time_duration">Time Duration</string>
    <string name="time_for_food_delievery">Time for Delivery</string>
    <string name="min_salary">Min Salary</string>
    <string name="max_salary">Max Salary</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_if_any">Time(if any)</string>
    <string name="Alert_Explanation_Location">You are requested to allow access location so that current location can be recorded</string>
    <string name="edit_post">Edit Post</string>
    <string name="remove_post">Remove Post</string>
    <string name="range_on_map">Range on Map</string>
    <string name="set_a_price_range">Set a Price Range</string>
    <string name="choose_category">Choose Category</string>
    <string name="apply">Apply</string>
    <string name="buy_or_sell_your_products">BUY OR SELL YOUR\nPRODUCTS</string>
    <string name="next">Next</string>
    <string name="GET_STARTED">GET STARTED</string>
    <string name="buy_or_sell_your_products_on_metatopos">Find buyers and sellers that suit your need</string>
    <string name="request_your_food_and_meal">REQUEST YOUR FOOD AND MEAL</string>
    <string name="make_your_offer_while_chatting_to_outher_users">Widest range of delivery restaurants</string>
    <string name="adverstise">ADVERTISE</string>
    <string name="put_your_advertisement">Help you choose the best advertising medium</string>
    <string name="search_for_you_job_on_metatopos">Apply to millions of job opportunities across top companies, industries &amp; locations</string>
    <string name="live_tracking_map">Live Tracking\nmap</string>
    <string name="when_you_agree_on_a_deal">Agree on deal and set a meeting place to track other user</string>
    <string name="post_your_need_and_offers">post your need \nand offers</string>
    <string name="request_or_offer_a_service">One stop destination for local services</string>
    <string name="enjoy_the_community">Enjoy the \ncommunity</string>
    <string name="explore_metatopos_and_enjoy_the_event_spots_all_the_fun">Discover upcoming events near you and get personalized recommendations</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="whole_world">Whole World</string>
    <string name="_0km">0km</string>
    <string name="filters">Filters</string>
    <string name="fee">Fee</string>
    <string name="time_of_interview">Time of Interview</string>
    <string name="date_of_interview">Date of Interview</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="price">Price</string>
    <string name="skip">Skip</string>
    <string name="_9000km">9000km</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="what_you_are_looking_for">What you are looking for...</string>
    <string name="validate_username">Sign in failed!/nEnter valid EmailID or Username</string>
    <string name="validate_password">Password should be of atleast 8 characters and must contain at least upper case letter, a number\nand a special charater.</string>
    <string name="register_validate_fullname">Registration failed!\nPlease enter valid Full Name</string>
    <string name="register_validate_username">Registration failed!\nPlease enter valid Username</string>
    <string name="check_username_minlength">Registration failed!\nUsername should be atleast of 6 characters</string>
    <string name="register_validate_email">Registration failed!\nPlease enter valid EmailID</string>
    <string name="register_validate_phone_number">Registration failed!\nPlease enter valid Mobile Number</string>
    <string name="register_confirm_password">Registration failed!\nPlease confirm Password</string>
</resources>