<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorwhite"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/dividergradient"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:padding="8dp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorblack"
        android:background="@color/colorwhite"
        android:textSize="14sp"
        android:text="@string/change_profile_photo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintcolor"/>

    <Button
        android:id="@+id/remove_current_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:background="@color/colorwhite"
        android:textColor="@color/colorred"
        android:textAllCaps="false"
        android:text="@string/remove_current_photo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintcolor"/>

    <Button
        android:id="@+id/choose_from_gallary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:background="@color/colorwhite"
        android:textColor="@color/colorlightblue"
        android:textAllCaps="false"
        android:text="@string/choose_from_library"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintcolor"/>
    <Button
        android:id="@+id/take_photo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@color/colorwhite"
        android:textColor="@color/colorlightblue"
        android:padding="12dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:text="@string/take_photo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hintcolor"/>
    <Button
        android:id="@+id/cancel_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@color/colorwhite"
        android:padding="15dp"
        android:text="@string/cancel"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorlightblue" />

</LinearLayout>
