<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/actionbar_lay"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorwhite">

        <ImageView
            android:id="@+id/filterpost_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_regular"
            android:text="@string/filters"
            android:textColor="@color/colorblack"
            android:textSize="18sp" />


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/actionbar_lay"
        android:background="@drawable/dividergradient"></View>

    <TextView
        android:id="@+id/range_on_map"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view"
        android:background="@color/layoutbacklight"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/range_on_map"
        android:textColor="@color/hintcolor"
        android:textSize="14sp" />


    <RelativeLayout
        android:id="@+id/range_on_map_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/range_on_map"
        android:layout_gravity="center"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="22dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/lato_regular"
            android:text="@string/_0km"
            android:textColor="@color/hintcolor"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/lato_regular"
            android:text="@string/_9000km"
            android:textColor="@color/hintcolor"
            android:textSize="11sp" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/rangeonmap_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/range_on_map_lay"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:max="9000"
        android:progress="4500"
        android:thumb="@drawable/seekbar_thumb" />

    <TextView
        android:id="@+id/showseekbarrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rangeonmap_seekbar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lato_regular"
        android:text="4500km"
        android:textColor="@color/profilehintcolor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/choose_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/showseekbarrange"
        android:background="@color/layoutbacklight"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/choose_category"
        android:textColor="@color/hintcolor"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/choose_category_lay"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/choose_category"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/post_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/postPic_lay"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/filterselectpostbggray"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_filter_post" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/postPic_lay"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/post" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_Pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/filterselectpostbggray"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_filter_event" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/event_Pic"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/event" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Advertisement_Pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/filterselectpostbggray"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_filter_ads" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/Advertisement_Pic"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/advertisement" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/set_price"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/choose_category_lay"
        android:background="@color/layoutbacklight"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/set_a_price_range"
        android:textColor="@color/hintcolor"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/price_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_price"
        android:layout_weight="2"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/from"
                android:textColor="@color/colorblack"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/min_price"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/event_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:textColor="@color/colorblack"
                android:textColorHint="@color/hintcolor"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/to"
                android:textColor="@color/colorblack"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/max_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/max_price"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/event_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:textColor="@color/colorblack"
                android:textColorHint="@color/hintcolor"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/price_lay"
        android:background="@color/layoutbacklight" />

    <LinearLayout
        android:id="@+id/buttom_lay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_clear_Filter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorlightblue"
            android:fontFamily="@font/lato_regular"
            android:text="@string/clear_filter"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Apply_Filter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/colorlightblue"
            android:fontFamily="@font/lato_regular"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>